--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /sign_cnn/.idea/inspectionProfiles/profiles_settings.xml
 /sign_cnn/.idea/inspectionProfiles/Project_Default.xml
 /sign_cnn/.idea/sign_cnn.iml
+*.jpg
